@@ -1954,15 +1954,20 @@
     </tr>
 
     <tr>
-      <td><pre>FIXSDL-grabmouse &lt;1|0&gt;</pre></td>	 
-      <td>Keeps the mouse in the game window in emulation mode.</td>	 
-    </tr>
-
-    <tr>
       <td><pre>-usemouse &lt;always|analog|never&gt;</pre></td>
       <td>Use mouse as a controller as specified by ROM properties in specific case.
       Always and never are self-explanatory, analog means only for analog-type devices
       (paddles, trackball, etc).</td>
+    </tr>
+
+    <tr>
+      <td><pre>-grabmouse &lt;1|0&gt;</pre></td> 
+      <td>Locks the mouse cursor in the game window in emulation mode.</td>
+    </tr>
+
+    <tr>
+      <td><pre>-hidecursor &lt;1|0&gt;</pre></td>
+      <td>Always hide the mouse cursor, or show it when appropriate.</td>
     </tr>
 
     <tr>
